# docs/swagger.json
@@ -30,18 +30,7 @@
                 }
             }
         },
-        "/home": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "session"
-                ],
-                "responses": {}
-            }
-        },
-        "/login": {
+        "/session/login": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -59,14 +48,14 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/session.Credentials"
+                            "$ref": "#/definitions/shared.Credentials"
                         }
                     }
                 ],
                 "responses": {}
             }
         },
-        "/logout": {
+        "/session/logout": {
             "post": {
                 "produces": [
                     "application/json"
@@ -77,7 +66,7 @@
                 "responses": {}
             }
         },
-        "/refresh": {
+        "/session/refresh": {
             "post": {
                 "produces": [
                     "application/json"
@@ -87,10 +76,57 @@
                 ],
                 "responses": {}
             }
+        },
+        "/session/secure": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "session"
+                ],
+                "responses": {}
+            }
+        },
+        "/token/login": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "token"
+                ],
+                "parameters": [
+                    {
+                        "description": "Credentials",
+                        "name": "credentials",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/shared.Credentials"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/token/secure": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "token"
+                ],
+                "responses": {}
+            }
         }
     },
     "definitions": {
-        "session.Credentials": {
+        "shared.Credentials": {
             "type": "object",
             "properties": {
                 "password": {
